@@ -3077,7 +3077,7 @@ PyEval_SetTrace(Py_tracefunc func, PyObject *arg)
 PyObject *
 PyEval_GetBuiltins(void)
 {
-	PyFrameObject *current_frame = (PyFrameObject *)PyEval_GetFrame();
+	PyFrameObject *current_frame = PyEval_GetFrame();
 	if (current_frame == NULL)
 		return PyThreadState_Get()->interp->builtins;
 	else
@@ -3087,7 +3087,7 @@ PyEval_GetBuiltins(void)
 PyObject *
 PyEval_GetLocals(void)
 {
-	PyFrameObject *current_frame = (PyFrameObject *)PyEval_GetFrame();
+	PyFrameObject *current_frame = PyEval_GetFrame();
 	if (current_frame == NULL)
 		return NULL;
 	PyFrame_FastToLocals(current_frame);
@@ -3097,31 +3097,31 @@ PyEval_GetLocals(void)
 PyObject *
 PyEval_GetGlobals(void)
 {
-	PyFrameObject *current_frame = (PyFrameObject *)PyEval_GetFrame();
+	PyFrameObject *current_frame = PyEval_GetFrame();
 	if (current_frame == NULL)
 		return NULL;
 	else
 		return current_frame->f_globals;
 }
 
-PyObject *
+PyFrameObject *
 PyEval_GetFrame(void)
 {
 	PyThreadState *tstate = PyThreadState_Get();
-	return _PyThreadState_GetFrame((PyObject *)tstate);
+	return _PyThreadState_GetFrame(tstate);
 }
 
 int
 PyEval_GetRestricted(void)
 {
-	PyFrameObject *current_frame = (PyFrameObject *)PyEval_GetFrame();
+	PyFrameObject *current_frame = PyEval_GetFrame();
 	return current_frame == NULL ? 0 : current_frame->f_restricted;
 }
 
 int
 PyEval_MergeCompilerFlags(PyCompilerFlags *cf)
 {
-	PyFrameObject *current_frame = (PyFrameObject *)PyEval_GetFrame();
+	PyFrameObject *current_frame = PyEval_GetFrame();
 	int result = cf->cf_flags != 0;
 
 	if (current_frame != NULL) {
